[gd_scene load_steps=7 format=3 uid="uid://bp86vnn2uy08u"]

[ext_resource type="Texture2D" uid="uid://dplyalhrc2i8b" path="res://assets/fruit_icon.png" id="1_8yi8s"]
[ext_resource type="Script" uid="uid://cxmiq53uj631" path="res://scenes/panel_tab.gd" id="1_gi5cc"]
[ext_resource type="FontFile" uid="uid://ci1tr875gml4b" path="res://assets/DynaPuff/DynaPuff-Bold.ttf" id="3_vtrft"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ewef2"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.235294, 0.756863, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_xhrxs"]
font = ExtResource("3_vtrft")
font_size = 25
font_color = Color(0.236816, 0.757813, 0, 1)
outline_size = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vtrft"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 500
corner_radius_top_right = 500
corner_radius_bottom_right = 500
corner_radius_bottom_left = 500

[node name="panel_tab" type="Button"]
self_modulate = Color(0.817233, 0.941406, 0.761215, 1)
custom_minimum_size = Vector2(192, 72)
offset_right = 64.0
offset_bottom = 24.0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_ewef2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ewef2")
theme_override_styles/normal = SubResource("StyleBoxFlat_ewef2")
script = ExtResource("1_gi5cc")

[node name="icon" type="TextureRect" parent="."]
custom_minimum_size = Vector2(42, 42)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -21.0
offset_right = -15.0
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(1.1, 1.1)
pivot_offset = Vector2(21, 21)
mouse_filter = 2
texture = ExtResource("1_8yi8s")
expand_mode = 2

[node name="tab_name" type="Label" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 14.0
offset_top = -15.0
offset_right = 278.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(60, 15)
text = "TabName"
label_settings = SubResource("LabelSettings_xhrxs")

[node name="badge" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -15.0
offset_top = -4.0
offset_right = 5.0
offset_bottom = 16.0
grow_horizontal = 0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(10, 10)
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vtrft")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
